add about-us page

--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>Brecon</title>
+    <title>Über Uns</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -242,7 +242,7 @@
                   <h1 class="banner__title text-white">
                     BRECON
                   </h1>
-                  <p class="section__title text-white">smarte Vibrations-Lösungen <br> für die Betonindustrie</p>
+                  <p class="section__title text-white">Produkte und Beratung weltweit <br> mit Sitz in Köln</p>
                   <a href="#" class="btn btn__outline-white">zu den Produkten</a>
                 </div>
               </div>
@@ -263,10 +263,12 @@
         <div class="container">
           <div class="row flex-wrap-reverse">
             <div class="col-lg-7 d-flex align-items-center">
-              <div class="section__content-md">
-                <h2 class="text-accent">BRECON VIBRATIONSTECHNIK</h2>
-                <p>Als BOSCH Ausgründung liefert BRECON seit 1995 überragende Vibrationstechnik für die Betonverdichtung, Materialverdichtung, Fördertechnik und andere Anwendungen.</p>
-                <a href="#" class="btn btn__outline-accent">mehr über uns</a>
+              <div class="section__content">
+                <h2 class="text-accent">BRECON - clevere <br> Vibrationstechnik</h2>
+               
+                <p class="mb-30">Als BOSCH Ausgründung liefert BRECON seit 1995 überragende Vibrationstechnik und Rüttler für die Verdichtung, Fördertechnik und andere Anwendungen.</p>
+                <p class="mb-30">Die BRECON GmbH bietet Produkte und Beratung weltweit und hat ihren Sitz in Köln.</p>
+                <p> Als exklusiver BOSCH-Lizenznehmer in den Jahren 1995 bis 2008, sowie mit unserem Know-how und unserer Erfahrung in der Umsetzung von Vibrationslösungen in den verschiedensten Industrien, entwickeln wir unsere Produktlinien fortlaufend weiter. Die Entwicklung neuer Rüttler und anderer Produkte folgt dabei den Marktbedürfnissen und geschieht oft in enger Kooperation mit den Herstellern von Maschinen und Anlagen.</p>
               </div>
             </div>
             <div class="col-lg-5 mb-5 mb-lg-0">
@@ -276,154 +278,6 @@
         </div>
       </section>
       <!-- technology section end -->
-
-      <!-- feature section start -->
-      <section class="feature bg__accent text-white">
-        <div class="container">
-          <div class="row"> 
-            <div class="col-lg-7">
-                <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                  <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#feature-tab1" type="button" role="tab" aria-controls="feature-tab1" aria-selected="true">BRECON führt die Produktlinie von BOSCH fort</button>
-                  <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#feature-tab2" type="button" role="tab" aria-controls="feature-tab2" aria-selected="false">Über BRECON: Rüttler und mehr</button>
-                  <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#feature-tab3" type="button" role="tab" aria-controls="feature-tab3" aria-selected="false">Aussenrüttler</button>
-                </div>
-            </div>
-            <div class="col-lg-5">
-              <div class="tab-content" id="v-pills-tabContent">
-                <div class="tab-pane fade show active" id="feature-tab1" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
-                  <p class="mb-30">Als Hersteller modernster Rüttler und entsprechender Steuerungssysteme bieten wir unseren Kunden eine breite Produktpalette und innovative Lösungen. Dabei verstehen wir uns als langfristigen Partner für Engineering und kundenspezifische Produktentwicklung. </p>
-                  <p class="mb-30">BRECON Rüttler und Steuerungssysteme werden in Eigenfertigung in unserer Produktion nach höchsten Engineering- und Qualitätsstandards in Köln hergestellt.</p>
-                  <a href="#" class="btn btn__outline-light">mehr erfahren</a>
-                </div>
-                <div class="tab-pane fade" id="feature-tab2" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
-                  <p class="mb-30">Als Hersteller modernster Rüttler und entsprechender Steuerungssysteme bieten wir unseren Kunden eine breite Produktpalette und innovative Lösungen. Dabei verstehen wir uns als langfristigen Partner für Engineering und kundenspezifische Produktentwicklung. </p>
-                  <p class="mb-30">BRECON Rüttler und Steuerungssysteme werden in Eigenfertigung in unserer Produktion nach höchsten Engineering- und Qualitätsstandards in Köln hergestellt.</p>
-                  <a href="#" class="btn btn__outline-light">mehr erfahren</a>
-                </div>
-                <div class="tab-pane fade" id="feature-tab3" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">
-                  <p class="mb-30">Als Hersteller modernster Rüttler und entsprechender Steuerungssysteme bieten wir unseren Kunden eine breite Produktpalette und innovative Lösungen. Dabei verstehen wir uns als langfristigen Partner für Engineering und kundenspezifische Produktentwicklung. </p>
-                  <p class="mb-30">BRECON Rüttler und Steuerungssysteme werden in Eigenfertigung in unserer Produktion nach höchsten Engineering- und Qualitätsstandards in Köln hergestellt.</p>
-                  <a href="#" class="btn btn__outline-light">mehr erfahren</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- feature section end -->
-
-      <!-- know section start  -->
-      <section class="know">
-        <div class="d-grid grid-cols-2">
-          <div class="left">
-            <img src="assets/images/know-img.png" alt="" class="img-fluid">
-          </div>
-          <div class="right d-flex align-items-center bg__gradient">
-            <div class="know__content">
-              <h2>Know-how Center</h2>
-              <p class="mb-30">Hier finden Sie Antworten auf ihre Fragen</p>
-              <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- know section end  -->
-
-      <!-- products section start -->
-      <section class="products block-margin">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6 d-flex align-items-lg-center">
-              <div class="section__content-md">
-                <h2 class="text-accent">PRODUKTE</h2>
-                <p class="mb-30">BRECON hat sich auf die Herstellung intelligenter Vibrationstechnik spezialisiert. Wir bieten clevere Lösungen für alle Anwendungen und Branchen.</p>
-                <p class="mb-30">Von Vibrationsmotoren für die industrielle Produktion wie der Betonverdichtung oder der Fördertechnik bis zu handgehaltenen Werkzeugen wie Innenrüttlern, tragbaren Produkten für die Verdichtung von Isolierungsmasse in Gießereien oder Flächenverdichtern für die Verdichtung beim Hausbau mit ICF (Insulated Concrete Forms) bieten wir eine umfassende Produktpalette.</p>
-                <p class="mb-30">Für maßgefertigte Produkte und mehr Informationen finden Sie alle Kontaktdaten auf unserer Kontaktseite.</p>
-                <p>Wir würden uns freuen Ihnen unsere technische Beratung anbieten zu dürfen.</p>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="row">
-                <div class="col-md-6 mb-5">
-                  <div class="card border-0 shadow-md d-flex justify-content-center align-items-center">
-                    <div class="card-header border-0 bg-transparent col-auto"><img src="assets/images/product-card-img-1.png" alt="" class="img-fluid"></div>
-                    <div class="card-body">
-                      <h3 class="text__dark">Aussenrüttler</h3>
-                      <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 mb-5">
-                  <div class="card border-0 shadow-md d-flex justify-content-center align-items-center">
-                    <div class="card-header border-0 bg-transparent col-auto"><img src="assets/images/product-card-img-2.png" alt="" class="img-fluid"></div>
-                    <div class="card-body">
-                      <h3 class="text__dark">Innenrüttler</h3>
-                      <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="card border-0 shadow-md d-flex justify-content-center align-items-center">
-                    <div class="card-header border-0 bg-transparent col-auto"><img src="assets/images/product-card-img-3.png" alt="" class="img-fluid"></div>
-                    <div class="card-body">
-                      <h3 class="text__dark">Kontrollsysteme</h3>
-                      <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="card border-0 p-4 shadow-md d-flex justify-content-center align-items-center">
-                    <div class="card-header border-0 bg-transparent col-auto"><img src="assets/images/product-card-img-4.png" alt="" class="img-fluid"></div>
-                    <div class="card-body">
-                      <h3 class="text__dark">Handgehaltene Verdichtung</h3>
-                      <a href="#" class="btn btn__outline-accent">mehr erfahren</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- products section end -->
-      
-      <!-- solutions section start -->
-      <section class="solution bg__accent text-white">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <img src="assets/images/solution-img.png" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-8 d-flex align-items-lg-center">
-              <div class="solution__content">
-                <h2>SONDERLÖSUNGEN</h2>
-                <p class="mb-30">Eine der größten Stärken von BRECON. BRECON ist der perfekte Engineering Partner für kundenspezifische Lösungen. Ganz gleich, ob es sich um eine einmalige Vibrationslösung handelt oder um eine kleine Serie.</p>
-                <p class="mb-30">BRECON entwickelt die Lösung für Sie und bietet CAD Design für Industrie Kunden. So können unsere Kunden vollständig von unserer Erfahrung und unserem spezifischem Know-how im Bereich der Vibrationstechnologie profitieren. Für maßgefertigte Produkte und mehr Informationen finden Sie alle Kontaktdaten auf unserer Kontakseite. Wir würden uns freuen Ihnen unsere technische Beratung anbieten zu dürfen.</p>
-                <a href="#" class="btn btn__outline-light">mehr erfahren</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- solutions section end -->
-
-      <!-- application section start --> 
-      <section class="application bg__gradient">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <h2 class="text-accent">ANWENDUNGEN</h2>
-            </div>
-            <div class="col-lg-8">
-              <div class="application__content">
-                <p class="section__title mb-30">BRECON Produkte können für eine große Vielfalt an Industrieanwendungen verwendet werden. BRECON Außenrüttler, Innenrüttler, Werkzeuge und Kontrollsysteme sind flexibel und anpassungsfähig.</p>
-                <a href="#" class="btn btn__outline-accent">zu den Anwendungen</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- application section end -->
     </main>
        <!-- footer section start -->
        <footer class="footer">
