add know-how-center page

--- a/about-us.html
+++ b/about-us.html
@@ -85,7 +85,7 @@
                       <div class="row">
                             <div class="col">
                               <p>Aussenrüttler</p>
-                              <a class="dropdown-item" href="#">Normalfrequenz-Rüttler</a>
+                              <a class="dropdown-item" href="Know-how-center.html">Normalfrequenz-Rüttler</a>
                               <a class="dropdown-item" href="#">Hochfrequenz-Rüttler</a>
                               <a class="dropdown-item" href="#">Druckluft-Rüttler</a>
                               <a class="dropdown-item" href="#">SLIM2-Mobiler Rüttler</a>
@@ -234,9 +234,9 @@
           <div class="bar color-gray"></div>
           <div class="bar color-gray--dark"></div>
         </div>
-        <div class="container">
-          <div class="row ">
-            <div class="col-lg-6">
+        <div class="container min-h-inherit">
+          <div class="row min-h-inherit">
+            <div class="col-lg-6 d-flex align-items-center">
               <div class="section__content-wrapper">
                 <div class="section__content banner__content">
                   <h1 class="banner__title text-white">
@@ -248,12 +248,6 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="banner-video-wrapper">
-          <video autoplay loop muted>
-            <source src="assets/images/banner-video.mov" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
         </div>
       </section>
       <!-- banner section end -->
@@ -278,6 +272,22 @@
         </div>
       </section>
       <!-- technology section end -->
+
+      <!-- offer section start -->
+      <section class="offer bg__light block-padding--xl">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 px-xxl-0">
+              <h2 class="text__accent">Unser Ziel ist es Ihnen die besten Produkte und Lösungen zu bieten:</h2>
+              <p class="mb-30">Unsere Rüttler sorgen für eine Produktion ohne Ausfälle und ermöglichen eine Produktion mit reproduzierbarer Qualität.</p>
+              <p class="mb-30">Wir reagieren schnell auf Ihre Anfrage, haben immer Ihre Kosten im Auge und betrachten uns als sehr kundenorientiert. In unseren zeitgemäßen Büro- und Produktionsanlagen können wir in kürzester Zeit maßgeschneiderte Lösungen für unsere Kunden umsetzen. Unsere 3D-CAD Systeme sowie die in die Produktion integrierte Qualitätssicherung helfen überzeugende und rentable Produkte der Vibrationstechnik zu entwickeln.</p>
+              <p>Unsere Website bietet Ihnen einen Überblick und erste Informationen für die Auswahl des gewünschten Produkts.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- offer section end -->
+
     </main>
        <!-- footer section start -->
        <footer class="footer">
