--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
           <div class="bar color-gray"></div>
           <div class="bar color-gray--dark"></div>
         </div>
-        <div class="container">
-          <div class="row ">
-            <div class="col-lg-6">
+        <div class="container min-h-inherit">
+          <div class="row min-h-inherit">
+            <div class="col-lg-6 d-flex align-items-center">
               <div class="section__content-wrapper">
                 <div class="section__content banner__content">
                   <h1 class="banner__title text-white">
@@ -248,12 +248,6 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="banner-video-wrapper">
-          <video autoplay loop muted>
-            <source src="assets/images/banner-video.mov" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
         </div>
       </section>
       <!-- banner section end -->
@@ -283,9 +277,9 @@
           <div class="row"> 
             <div class="col-lg-7">
                 <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                  <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#feature-tab1" type="button" role="tab" aria-controls="feature-tab1" aria-selected="true">BRECON führt die Produktlinie von BOSCH fort</button>
-                  <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#feature-tab2" type="button" role="tab" aria-controls="feature-tab2" aria-selected="false">Über BRECON: Rüttler und mehr</button>
-                  <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#feature-tab3" type="button" role="tab" aria-controls="feature-tab3" aria-selected="false">Aussenrüttler</button>
+                  <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#feature-tab1" type="button" role="tab" aria-controls="feature-tab1" aria-selected="true"><span>BRECON führt die Produktlinie von BOSCH fort</span></button>
+                  <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#feature-tab2" type="button" role="tab" aria-controls="feature-tab2" aria-selected="false"><span>Über BRECON: Rüttler und mehr</span></button>
+                  <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#feature-tab3" type="button" role="tab" aria-controls="feature-tab3" aria-selected="false"><span>Aussenrüttler</span></button>
                 </div>
             </div>
             <div class="col-lg-5">
