add application page

--- a/application.html
+++ b/application.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>Product detail</title>
+    <title>Application</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -223,8 +223,8 @@
       </nav>
     </header>
     <main>
-      <!-- product-detail section start -->
-      <section class="product-detail position-relative">
+      <!-- products section start -->
+      <section class="products position-relative">
         <div class="topbar">
           <div class="bar color-blue--dark"></div>
           <div class="bar color-blue"></div>
@@ -235,52 +235,58 @@
           <div class="bar color-gray--dark"></div>
         </div>
         <div class="container">
-          <div class="row flex-wrap-reverse">
-            <div class="col-lg-6">
-                <a href="products.html" class="prev-link">zurück</a>
-              <h2 class="text-accent mb-2">BRECON Innenrüttler für den Anschluss an Frequenzumrichter</h2>
-                      
-              <div class="section__content">
-                  <p class="mb-30"> BRECON bietet Innenrüttler für den Anschluss an Frequenzumrichter mit 31, 38, 50, 58, 65 und 80mm Durchmesser für 42V/200Hz und 200V/250Hz 3-phasig an.</p>
-                   <p class="mb-30"> BRECON Innenrüttler bieten Ihnen folgende Vorteile:</p>
-                   <ul class="list-unstyled ps-0">
-                    <li class="list__item">Großer effektiver Verdichtungsradius durch hohe Fliehkräfte</li>
-                    <li class="list__item">Große Leistungsreserven</li>
-                    <li class="list__item">Extrem lange Lebensdauer</li>
-                    <li class="list__item">Schneller Wechsel aller Ersatzteile</li>
-                    <li class="list__item">Robustes und kompaktes Design</li>
-                    <li class="list__item">Schutz vor thermischer Überlastung durch Thermosensoren</li>
-                    <li class="list__item"> Kühlung durch Öl-Schmierung</li>
-                    <li class="list__item"> Hohe elektrische Effizienz, sogar unter Last dank einem kurzschlussfesten Stators</li>
-                    <li class="list__item">Wasserdichter Schlauchanschluss</li>
-                    <li class="list__item">Austauschbare Kappe</li>
-                   </ul>
-                   <p class="mb-0">Bitte beachten Sie, dass diese Innenrüttler nur über einen Frequenzumrichter in Betrieb genommen werden können.</p>
-              </div>
-            </div>
-            <div class="col-lg-6 mb-5 mb-lg-0">
-                <img src="assets/images/product-detail-img.png" alt="" class="img-fluid">
+          <div class="row">
+            <div class="col-12">
+              <h2 class="text-accent mb-2">BRECON Produkte können für eine große Vielfalt an <br> Industrieanwendungen verwendet werden.</h2>
+              <p class="mb-30">BRECON Außenrüttler, Werkzeuge und Kontrolleinheiten sind flexibel und anpassungsfähig.</p>
+               <p class="mb-30"> Die Mitarbeiter von BRECON helfen Ihnen gerne, die beste Lösung für Ihr technisches Problem oder Ihre Anwendung zu finden. Von der Erfahrung und dem Know-how von BRECON profitieren Sie in vielen Branchen. BRECON hat in den letzten 20 Jahren unzählige Anwendungen im Bereich der Vibrationstechnik weltweit umgesetzt.</p>
+               <p class="mb-0">Wir haben eine Auswahl von typischen Anwendungen zusammengestellt, um beispielhaft unsere Herangehensweise zu präsentieren.</p>
             </div>
           </div>
           </div>
         </div>
       </section>
-      <!-- product-detail section end -->
+      <!-- products section end -->
 
-        <!-- product-info section start -->
-        <section class="product-info">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 mx-auto">
-                        <div class="product-info__content">
-                            <h3>In unserem Katalog finden Sie detaillierte Information zu unseren Produkten.</h3>
-                            <a href="#" class="btn btn__outline-dark">Produktkatalog</a>
-                        </div>
-                    </div>
-                </div>
+      <!-- products cards section start -->
+      <section class="products-cards bg__blue--light application__products">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+              <img src="assets/images/application-img-1.png" alt="" class="img-fluid" />
+              <h3 class="section__title">Betonverdichtung</h3>
+              <ul class="list-unstyled ps-0 list--arrow">
+                <li class="list__item">
+                  <a class="list__link" href="#">Trockenbeton</a>
+                  <a class="list__link" href="#">Nassbeton</a>
+                  <a class="list__link" href="#">ICF</a>
+                </li>
+              </ul>
             </div>
-        </section>
-        <!-- product-info section end -->
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+              <img src="assets/images/application-img-2.png" alt="" class="img-fluid">
+              <h3 class="section__title">Material Verdichtung</h3>
+              <ul class="list-unstyled ps-0 list--arrow">
+                <li class="list__item">
+                  <a class="list__link" href="#">Gießerei Verdichtung</a>
+                  <a class="list__link" href="#">Schüttgut-Verdichtung</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+              <img src="assets/images/application-img-3.png" alt="" class="img-fluid">
+              <h3 class="section__title">Fördertechnik</h3>
+              <ul class="list-unstyled ps-0 list--arrow">
+                <li class="list__item">
+                  <a class="list__link" href="#">Fördern und Sieben</a>
+                  <a class="list__link" href="#">Lockern und Lösen</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- products cards section end -->
 
     </main>
        <!-- footer section start -->
