home page responsive

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       <section class="products block-margin">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 d-flex align-items-lg-center">
+            <div class="col-lg-6 d-flex align-items-lg-center mb-5 mb-lg-0">
               <div class="section__content-md">
                 <h2 class="text-accent">PRODUKTE</h2>
                 <p class="mb-30">BRECON hat sich auf die Herstellung intelligenter Vibrationstechnik spezialisiert. Wir bieten clevere Lösungen für alle Anwendungen und Branchen.</p>
@@ -356,7 +356,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5 mb-lg-0">
                   <div class="card border-0 shadow-md d-flex justify-content-center align-items-center">
                     <div class="card-header border-0 bg-transparent col-auto"><img src="assets/images/product-card-img-3.png" alt="" class="img-fluid"></div>
                     <div class="card-body">
@@ -385,7 +385,7 @@
       <section class="solution bg__accent text-white">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 mb-5 mb-lg-0">
               <img src="assets/images/solution-img.png" alt="" class="img-fluid">
             </div>
             <div class="col-lg-8 d-flex align-items-lg-center">
@@ -426,7 +426,7 @@
                 <div class="col-lg-3 mb-5 mb-lg-0 ">
                     <img src="assets/images/BRECON-LOGO.svg" alt="footer logo" class="img-fluid footer__logo">
                 </div>
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
                   <ul class="footer__list list--hover">
                       <li class="list__item"><a href="#" class="list__link">Über Uns</a></li>
                       <li class="list__item"><a href="#" class="list__link">Know-how Center</a></li>
@@ -435,13 +435,13 @@
                       <li class="list__item"><a href="#" class="list__link">Kontakt</a></li>
                   </ul>
               </div>
-              <div class="col-lg-3 col-sm-6">
+              <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
                 <ul class="footer__list">
                   <li class="list__item">Tel.:<a href="tel:+49(0)221-9544270" class="list__link"> +49(0)221-9544270</a></li>
                   <li class="list__item">E-Mail:<a href="mailto:mail@brecon.de"  class="list__link"> mail@brecon.de</a></li>
               </ul>
               </div>
-                <div class="col-lg-3 col-sm-6 ">  
+                <div class="col-lg-3 col-sm-6">  
                   <address>
                    <p class="mb-0">BRECON Vibrationstechnik GmbH</p>
                    <p class="mb-0">Stolberger Straße 393</p>
