--- a/products.html
+++ b/products.html
@@ -224,7 +224,7 @@
     </header>
     <main>
       <!-- products section start -->
-      <section class="products position-relative">
+      <section class="products-info position-relative">
         <div class="topbar">
           <div class="bar color-blue--dark"></div>
           <div class="bar color-blue"></div>
