--- a/application-detail.html
+++ b/application-detail.html
@@ -238,7 +238,7 @@
           <div class="row">
             <div class="col-lg-6">
               <a href="products.html" class="prev-link">zurück</a>
-                      <h2 class="text-accent mb-2">Gießerei Verdichtung</h2>
+                      <h2 class="text-accent mb-lg-2 mb-4">Gießerei Verdichtung</h2>
             </div>
           </div>
           <div class="row flex-wrap-reverse">
@@ -250,7 +250,7 @@
                    <p class="mb-0">  Der BRECON TAMPER ist unter anderem ideal für diese Art der Anwendung geeignet, da er als tragbarer und handlicher Stampfer präzise in jeder Lage verdichtet. Der BRECON TAMPER zeichnet sich durch seine kompakte Bauweise, sein geringes Gewicht und nicht zuletzt durch die hohe Verdichtungskraft aus. Dank des großen Zubehörs kann der BRECON TAMPER an verschiedene Bedürfnisse angepasst werden. So kann er sowohl für die Verdichtung als auch für die Entfernung von feuerfesten Massen eingesetzt werden.</p>
               </div>
             </div>
-            <div class="col-lg-6 mb-5 mb-lg-0 ">
+            <div class="col-lg-6 mb-5 mb-lg-0 d-lg-flex justify-content-lg-end">
                 <img src="assets/images/application__detail-img.png" alt="" class="img-fluid">
             </div>
           </div>
