--- a/application.html
+++ b/application.html
@@ -224,7 +224,7 @@
     </header>
     <main>
       <!-- products section start -->
-      <section class="products position-relative">
+      <section class="products-info position-relative">
         <div class="topbar">
           <div class="bar color-blue--dark"></div>
           <div class="bar color-blue"></div>
@@ -252,8 +252,8 @@
       <section class="products-cards bg__blue--light application__products">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-              <img src="assets/images/application-img-1.png" alt="" class="img-fluid" />
+            <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+              <img src="assets/images/application-img-1.png" alt="" class="img-fluid mb-3" />
               <h3 class="section__title">Betonverdichtung</h3>
               <ul class="list-unstyled ps-0 list--arrow">
                 <li class="list__item">
@@ -263,8 +263,8 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-              <img src="assets/images/application-img-2.png" alt="" class="img-fluid">
+            <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+              <img src="assets/images/application-img-2.png" alt="" class="img-fluid mb-3">
               <h3 class="section__title">Material Verdichtung</h3>
               <ul class="list-unstyled ps-0 list--arrow">
                 <li class="list__item">
@@ -273,8 +273,8 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-              <img src="assets/images/application-img-3.png" alt="" class="img-fluid">
+            <div class="col-lg-4 col-md-6 ">
+              <img src="assets/images/application-img-3.png" alt="" class="img-fluid mb-3">
               <h3 class="section__title">Fördertechnik</h3>
               <ul class="list-unstyled ps-0 list--arrow">
                 <li class="list__item">
