--- a/contact.html
+++ b/contact.html
@@ -223,10 +223,10 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="d-flex flex-column min-vh-100">
      
     <!-- contact section start -->
-    <section class="contact position-relative">
+    <section class="contact position-relative flex-grow-1">
         <div class="topbar">
             <div class="bar color-blue--dark"></div>
             <div class="bar color-blue"></div>
@@ -272,7 +272,7 @@
                           <textarea
                             class="form-control"
                             placeholder="Hallo, ich habe eine Frage bezüglich... *"
-                            rows="3"
+                            rows="2"
                             id="message"
                           ></textarea>
                         </div>
