--- a/products.html
+++ b/products.html
@@ -237,7 +237,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2 class="text-accent mb-0">BRECON hat sich auf die Herstellung intelligenter Vibrationstechnik spezialisiert. Wir bieten clevere Lösungen für alle Anwendungen und Branchen.</h2>
+              <h2 class="text-accent mb-lg-2 mb-4">BRECON hat sich auf die Herstellung intelligenter Vibrationstechnik spezialisiert. Wir bieten clevere Lösungen für alle Anwendungen und Branchen.</h2>
               <p class="mb-30">Von Vibrationsmotoren für die industrielle Produktion wie der Betonverdichtung oder der Fördertechnik bis zu handgehaltenen Werkzeugen wie Innenrüttlern, tragbaren Produkten für die Verdichtung von Isolierungsmasse in Gießereien oder Flächenverdichtern für die Verdichtung beim Hausbau mit ICF (Insulated Concrete Forms) bieten wir eine umfassende Produktpalette.</p>
                <p class="mb-0">Für maßgefertigte Produkte und mehr Informationen, finden Sie alle Kontaktdaten auf unserer Kontaktseite.</p>
                <p class="mb-0"> Wir würden uns freuen Ihnen unsere technische Beratung anbieten zu dürfen.</p>
@@ -249,11 +249,11 @@
       <!-- products section end -->
 
       <!-- products cards section start -->
-      <section class="products-cards">
+      <section class="products-cards block-padding--xl pt-0">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <img src="assets/images/product-img-1.png" alt="" class="img-fluid" />
+            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+              <img src="assets/images/product-img-1.png" alt="" class="img-fluid mb-3" />
               <h3 class="section__title">Aussenrüttler</h3>
               <ul class="list-unstyled ps-0 list--arrow">
                 <li class="list__item">
@@ -268,8 +268,8 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <img src="assets/images/product-img-2.png" alt="" class="img-fluid">
+            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+              <img src="assets/images/product-img-2.png" alt="" class="img-fluid mb-3">
               <h3 class="section__title">Innenrüttler</h3>
               <ul class="list-unstyled ps-0 list--arrow">
                 <li class="list__item">
@@ -279,8 +279,8 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <img src="assets/images/product-img-3.png" alt="" class="img-fluid">
+            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+              <img src="assets/images/product-img-3.png" alt="" class="img-fluid mb-3">
               <h3 class="section__title">Kontroll-Systeme</h3>
               <ul class="list-unstyled ps-0 list--arrow">
                 <li class="list__item">
@@ -288,8 +288,8 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <img src="assets/images/product-img-4.png" alt="" class="img-fluid">
+            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+              <img src="assets/images/product-img-4.png" alt="" class="img-fluid mb-3">
               <h3 class="section__title">Handgehaltene Verdichtungen</h3>
               <ul class="list-unstyled ps-0 list--arrow">
                 <li class="list__item">
