--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-5 mb-lg-0">
+                <div class="col-md-6 mb-5 mb-md-0">
                   <div class="card border-0 shadow-md d-flex justify-content-center align-items-center">
                     <div class="card-header border-0 bg-transparent col-auto"><img src="assets/images/product-card-img-3.png" alt="" class="img-fluid"></div>
                     <div class="card-body">
