--- a/product-detail.html
+++ b/product-detail.html
@@ -235,10 +235,14 @@
           <div class="bar color-gray--dark"></div>
         </div>
         <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <a href="products.html" class="prev-link">zurück</a>
+                      <h2 class="text-accent mb-lg-2 mb-4">BRECON Innenrüttler für den Anschluss an Frequenzumrichter</h2>
+            </div>
+          </div>
           <div class="row flex-wrap-reverse">
             <div class="col-lg-6">
-                <a href="products.html" class="prev-link">zurück</a>
-              <h2 class="text-accent mb-2">BRECON Innenrüttler für den Anschluss an Frequenzumrichter</h2>
                       
               <div class="section__content">
                   <p class="mb-30"> BRECON bietet Innenrüttler für den Anschluss an Frequenzumrichter mit 31, 38, 50, 58, 65 und 80mm Durchmesser für 42V/200Hz und 200V/250Hz 3-phasig an.</p>
@@ -258,7 +262,7 @@
                    <p class="mb-0">Bitte beachten Sie, dass diese Innenrüttler nur über einen Frequenzumrichter in Betrieb genommen werden können.</p>
               </div>
             </div>
-            <div class="col-lg-6 mb-5 mb-lg-0">
+            <div class="col-lg-6 mb-5 mb-lg-0 d-lg-flex justify-content-lg-end align-items-lg-start">
                 <img src="assets/images/product-detail-img.png" alt="" class="img-fluid">
             </div>
           </div>
